[package]
name = "stateful-native-library"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
build = "build.rs"
links = "stateful"

[dev-dependencies]
static_assertions = "1.0"

[dependencies]
thiserror = "1.0"

[build-dependencies]
cc = "1.0"

